bugfix/PORT-5506: Edit & Delete button alignment for Setting v2 page

--- a/src/styles/prime-custom.scss
+++ b/src/styles/prime-custom.scss
@@ -155,7 +155,11 @@ $element-color-orange-80: palette(orange, 80);
         }
 
         &.p-button-icon-only {
-            width: 32px;
+            width: 41px;
+
+            @media (max-width: 1600px) {
+                width: 32px;
+            }
         }
 
         svg {
@@ -397,6 +401,10 @@ $element-color-orange-80: palette(orange, 80);
             border-radius: 24px;
             width: 640px;
             object-fit: contain;
+
+            @media (max-width: 1600px) {
+                width: 540px;
+            }
         }
     }
 }
